force-app/main/default/objects/LPCR_Structure_AO__c/LPCR_Structure_AO__c.object-meta.xml
<CustomObject>
    <label>Structure AO</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Structures AO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>