force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_Creation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Création</label>
    <type>Checkbox</type>
</CustomField>