force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_GestionnaireActuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_GestionnaireActuel__c</fullName>
    <label>Gestionnaire actuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LPCR</fullName>
            </value>
            <value>
                <fullName>Babilou</fullName>
            </value>
            <value>
                <fullName>La maison bleue</fullName>
            </value>
            <value>
                <fullName>Peoplenbaby</fullName>
            </value>
            <value>
                <fullName>Enfance pour tous</fullName>
            </value>
            <value>
                <fullName>Crèche attitude</fullName>
            </value>
            <value>
                <fullName>Crèche de france</fullName>
            </value>
            <value>
                <fullName>AASBR</fullName>
            </value>
            <value>
                <fullName>ADMR</fullName>
            </value>
            <value>
                <fullName>AGDS</fullName>
            </value>
            <value>
                <fullName>AGES</fullName>
            </value>
            <value>
                <fullName>ALEF</fullName>
            </value>
            <value>
                <fullName>ALFA 3A</fullName>
            </value>
            <value>
                <fullName>SLEA</fullName>
            </value>
            <value>
                <fullName>Mutualité française</fullName>
            </value>
            <value>
                <fullName>Les petites canailles</fullName>
            </value>
            <value>
                <fullName>Crescendo</fullName>
            </value>
            <value>
                <fullName>Envol</fullName>
            </value>
            <value>
                <fullName>Leo Lagrange</fullName>
            </value>
            <value>
                <fullName>Famille rurale</fullName>
            </value>
            <value>
                <fullName>Croix St Simon</fullName>
            </value>
            <value>
                <fullName>IFAC</fullName>
            </value>
            <value>
                <fullName>La croix rouge</fullName>
            </value>
            <value>
                <fullName>Léa et léo</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>