force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_GestionnaireActuelAutre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_GestionnaireActuelAutre__c</fullName>
    <label>Gestionnaire actuel &quot;Autre&quot;</label>
    <length>80</length>
    <type>Text</type>
</CustomField>