force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_GestionnaireRetenuAutre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_GestionnaireRetenuAutre__c</fullName>
    <label>Gestionnaire retenu &quot;Autre&quot;</label>
    <length>80</length>
    <type>Text</type>
</CustomField>