force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_Lead__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Structures AO</relationshipLabel>
    <relationshipName>Structures_AO</relationshipName>
    <type>Lookup</type>
</CustomField>