force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_NombrePlacesACommercialiser__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombrePlacesACommercialiser__c</fullName>
    <label>Nombre de places à commercialiser</label>
    <length>10</length>
    <type>Text</type>
</CustomField>