force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_NomCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomCreche__c</fullName>
    <label>Nom de la crèche</label>
    <length>80</length>
    <type>Text</type>
</CustomField>