force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_PrixConcurrent__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixConcurrent__c</fullName>
    <label>Prix concurrent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>