force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_PrixLPCRPlace__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixLPCRPlace__c</fullName>
    <label>Prix LPCR / place</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>