force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_Type__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Type__c</fullName>
    <label>Type de structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mac</fullName>
            </value>
            <value>
                <fullName>HG</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
            <value>
                <fullName>MAF</fullName>
            </value>
            <value>
                <fullName>RAM</fullName>
            </value>
            <value>
                <fullName>ALSH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>