force-app/main/default/objects/LPCR_Structure_AO__c/fields/LPCR_TypeGestionnaireActuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeGestionnaireActuel__c</fullName>
    <label>Type de gestionnaire actuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associatif</fullName>
            </value>
            <value>
                <fullName>Privé</fullName>
            </value>
            <value>
                <fullName>Régie directe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>