force-app/main/default/objects/LPCR_Structure_AO__c/fields/Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Structures AO</relationshipLabel>
    <relationshipName>Structures_AO</relationshipName>
    <type>Lookup</type>
</CustomField>